// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Circle Component рендерит в состоянии changing 1`] = `
<DocumentFragment>
  <div
    class="content "
  >
    <div
      class="text text_type_input text_color_input mb-4 absolute head element"
      data-test-id="circleHead"
    />
    <div
      class="circle   changing"
      data-test-id="circle"
    >
      <p
        class="text text_type_circle text_color_input letter"
      />
    </div>
    <p
      class="text text_type_input text_color_input mt-4 absolute index"
    />
    <div
      class="text text_type_input text_color_input mt-4 absolute tail30 element"
      data-test-id="circleTail"
    />
  </div>
</DocumentFragment>
`;

exports[`Circle Component рендерит в состоянии default 1`] = `
<DocumentFragment>
  <div
    class="content "
  >
    <div
      class="text text_type_input text_color_input mb-4 absolute head element"
      data-test-id="circleHead"
    />
    <div
      class="circle   default"
      data-test-id="circle"
    >
      <p
        class="text text_type_circle text_color_input letter"
      />
    </div>
    <p
      class="text text_type_input text_color_input mt-4 absolute index"
    />
    <div
      class="text text_type_input text_color_input mt-4 absolute tail30 element"
      data-test-id="circleTail"
    />
  </div>
</DocumentFragment>
`;

exports[`Circle Component рендерит в состоянии modified 1`] = `
<DocumentFragment>
  <div
    class="content "
  >
    <div
      class="text text_type_input text_color_input mb-4 absolute head element"
      data-test-id="circleHead"
    />
    <div
      class="circle   modified"
      data-test-id="circle"
    >
      <p
        class="text text_type_circle text_color_input letter"
      />
    </div>
    <p
      class="text text_type_input text_color_input mt-4 absolute index"
    />
    <div
      class="text text_type_input text_color_input mt-4 absolute tail30 element"
      data-test-id="circleTail"
    />
  </div>
</DocumentFragment>
`;

exports[`Circle Component рендерит с head 1`] = `
<DocumentFragment>
  <div
    class="content "
  >
    <div
      class="text text_type_input text_color_input mb-4 absolute head string"
      data-test-id="circleHead"
    >
      Test Head
    </div>
    <div
      class="circle   default"
      data-test-id="circle"
    >
      <p
        class="text text_type_circle text_color_input letter"
      />
    </div>
    <p
      class="text text_type_input text_color_input mt-4 absolute index"
    />
    <div
      class="text text_type_input text_color_input mt-4 absolute tail30 element"
      data-test-id="circleTail"
    />
  </div>
</DocumentFragment>
`;

exports[`Circle Component рендерит с index 1`] = `
<DocumentFragment>
  <div
    class="content "
  >
    <div
      class="text text_type_input text_color_input mb-4 absolute head element"
      data-test-id="circleHead"
    />
    <div
      class="circle   default"
      data-test-id="circle"
    >
      <p
        class="text text_type_circle text_color_input letter"
      />
    </div>
    <p
      class="text text_type_input text_color_input mt-4 absolute index"
    >
      5
    </p>
    <div
      class="text text_type_input text_color_input mt-4 absolute tail60 element"
      data-test-id="circleTail"
    />
  </div>
</DocumentFragment>
`;

exports[`Circle Component рендерит с react-элементом в head 1`] = `
<DocumentFragment>
  <div
    class="content "
  >
    <div
      class="text text_type_input text_color_input mb-4 absolute head element"
      data-test-id="circleHead"
    >
      <span>
        React Element
      </span>
    </div>
    <div
      class="circle   default"
      data-test-id="circle"
    >
      <p
        class="text text_type_circle text_color_input letter"
      />
    </div>
    <p
      class="text text_type_input text_color_input mt-4 absolute index"
    />
    <div
      class="text text_type_input text_color_input mt-4 absolute tail30 element"
      data-test-id="circleTail"
    />
  </div>
</DocumentFragment>
`;

exports[`Circle Component рендерит с react-элементом в tail 1`] = `
<DocumentFragment>
  <div
    class="content "
  >
    <div
      class="text text_type_input text_color_input mb-4 absolute head element"
      data-test-id="circleHead"
    />
    <div
      class="circle   default"
      data-test-id="circle"
    >
      <p
        class="text text_type_circle text_color_input letter"
      />
    </div>
    <p
      class="text text_type_input text_color_input mt-4 absolute index"
    />
    <div
      class="text text_type_input text_color_input mt-4 absolute tail30 element"
      data-test-id="circleTail"
    >
      <span>
        Tail Element
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Circle Component рендерит с tail 1`] = `
<DocumentFragment>
  <div
    class="content "
  >
    <div
      class="text text_type_input text_color_input mb-4 absolute head element"
      data-test-id="circleHead"
    />
    <div
      class="circle   default"
      data-test-id="circle"
    >
      <p
        class="text text_type_circle text_color_input letter"
      />
    </div>
    <p
      class="text text_type_input text_color_input mt-4 absolute index"
    />
    <div
      class="text text_type_input text_color_input mt-4 absolute tail30 string"
      data-test-id="circleTail"
    >
      Tail Text
    </div>
  </div>
</DocumentFragment>
`;

exports[`Circle Component рендерит с пропом isSmall === true 1`] = `
<DocumentFragment>
  <div
    class="content "
  >
    <div
      class="text text_type_input text_color_input mb-4 absolute head element"
      data-test-id="circleHead"
    />
    <div
      class="circle  small is-small default"
      data-test-id="circle"
    >
      <p
        class="text text_type_circle text_color_input letter"
      />
    </div>
    <p
      class="text text_type_input text_color_input mt-4 absolute index"
    />
    <div
      class="text text_type_input text_color_input mt-4 absolute tail30 element"
      data-test-id="circleTail"
    />
  </div>
</DocumentFragment>
`;

exports[`Circle Component рендерит элемент без буквы 1`] = `
<DocumentFragment>
  <div
    class="content "
  >
    <div
      class="text text_type_input text_color_input mb-4 absolute head element"
      data-test-id="circleHead"
    />
    <div
      class="circle   default"
      data-test-id="circle"
    >
      <p
        class="text text_type_circle text_color_input letter"
      />
    </div>
    <p
      class="text text_type_input text_color_input mt-4 absolute index"
    />
    <div
      class="text text_type_input text_color_input mt-4 absolute tail30 element"
      data-test-id="circleTail"
    />
  </div>
</DocumentFragment>
`;

exports[`Circle Component рендерит элемент с буквой 1`] = `
<DocumentFragment>
  <div
    class="content "
  >
    <div
      class="text text_type_input text_color_input mb-4 absolute head element"
      data-test-id="circleHead"
    />
    <div
      class="circle   default"
      data-test-id="circle"
    >
      <p
        class="text text_type_circle text_color_input letter"
      >
        A
      </p>
    </div>
    <p
      class="text text_type_input text_color_input mt-4 absolute index"
    />
    <div
      class="text text_type_input text_color_input mt-4 absolute tail30 element"
      data-test-id="circleTail"
    />
  </div>
</DocumentFragment>
`;
